fixing keeper alignment when there are few keepers

--- a/packrat/styles/metro/slider2.css
+++ b/packrat/styles/metro/slider2.css
@@ -259,6 +259,7 @@
   font: 300 12px/27px Lato,sans-serif;
 }
 .kifi-slider2-keepers {
+  text-align: right;
   direction: rtl;
   font-size: 0;
   line-height: 0;
